maybe fixed attributions missing on mobile?

--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,8 @@ html, body {
 /* Map */
 #map {
     position: absolute;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     top: 0;
     bottom: 0;
     overflow: hidden;
